@@ -58,6 +58,8 @@ Version 0.7.4 UNRELEASED
 
   * Convert some instances of boost::hash to std::
 
+  * Remove two uses of boost::lexical_cast, use std::to_string() instead
+
 
 [2015-10-07]
 Version 0.7.3
